--- a/index.html
+++ b/index.html
@@ -70,12 +70,4 @@
 </body>
 </html>
 
-<!-- 
-✅ Improvements applied:
-- Added blue accent color for professionalism
-- Rounded service boxes and portfolio cards for modern look
-- Placeholder profile photo block
-- Styled contact links
-
-💡 Next: Replace “Photo” div with your real photo when ready.
--->
+<!-- ✅ Use this as your updated index.html code to overwrite on GitHub now. Let me know when done so we confirm deployment. -->
