--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     .portfolio-item { margin-bottom: 20px; background: #fff; padding: 10px; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
     footer { background: #004080; color: #fff; text-align: center; }
     .contact-link { color: #004080; text-decoration: none; }
-    .profile-pic { display: block; margin: 20px auto; width: 120px; height: 120px; border-radius: 50%; background: #ccc; line-height: 120px; text-align: center; font-size: 14px; color: #666; }
+    .profile-pic { display: block; margin: 20px auto; width: 120px; height: 120px; border-radius: 50%; overflow: hidden; }
+    .profile-pic img { width: 100%; height: auto; }
   </style>
 </head>
 <body>
@@ -32,7 +33,9 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <div class="profile-pic">Photo</div>
+    <div class="profile-pic">
+      <img src="RobLinkedin.png" alt="Robert Fruchtman">
+    </div>
     <p>I am a versatile freelancer specializing in fast WordPress edits, virtual assistance, and AI-powered solutions. I bring decades of IT expertise with a focus on delivering practical, results-driven outcomes for clients worldwide.</p>
   </section>
 
@@ -70,4 +73,4 @@
 </body>
 </html>
 
-<!-- ✅ Use this as your updated index.html code to overwrite on GitHub now. Let me know when done so we confirm deployment. -->
+<!-- ✅ Your real photo is now embedded using RobLinkedin.png as the image source. Upload this image file to your GitHub repository for it to display live. Let me know when done for final styling adjustments. -->
