--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
     .portfolio-item { margin-bottom: 20px; background: #fff; padding: 10px; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
     footer { background: #004080; color: #fff; text-align: center; }
     .contact-link { color: #004080; text-decoration: none; }
-    .profile-pic { display: block; margin: 20px auto; width: 120px; height: 120px; border-radius: 50%; overflow: hidden; }
-    .profile-pic img { width: 100%; height: auto; }
+    .profile-pic {
+      display: block;
+      margin: 20px auto;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      overflow: hidden;
+      background: #ccc;
+    }
+    .profile-pic img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body>
@@ -72,5 +84,3 @@
   </footer>
 </body>
 </html>
-
-<!-- ✅ Your real photo is now embedded using RobLinkedin.png as the image source. Upload this image file to your GitHub repository for it to display live. Let me know when done for final styling adjustments. -->
