--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
     }
     .profile-pic img {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
+      height: auto;
+      object-fit: contain;
+    }  </style>
 </head>
 <body>
   <header>
